k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arabic-app
  labels:
    app: arabic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arabic-app
  template:
    metadata:
      labels:
        app: arabic-app
    spec:
      containers:
        - name: arabic-app
          image: 833727176090.dkr.ecr.eu-west-2.amazonaws.com/mohamed/arabic-app:latest
          ports:
            - containerPort: 5000
