k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arabic-app-service
spec:
  selector:
    app: arabic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
